# template-py

./: .gitignore  .gitleaks.toml  README.md  cookiecutter.debug  cookiecutter.json  mkdocs.yml  pyproject.toml
docs/: gen_api_docs.py
docs/css/: code_select.css
docs/reference/: SUMMARY.md
docs/reference/example_mkdocstrings_lib/: MyClass.md  __init__.md
hooks/: __init__.py  post_gen_project.py
hooks/utils/: __init__.py
site/: 404.html  gen_api_docs.py  index.html  objects.inv  sitemap.xml
site/css/: code_select.css
site/reference/SUMMARY/: index.html
site/reference/example_mkdocstrings_lib/: index.html
site/reference/example_mkdocstrings_lib/MyClass/: index.html
site/reference/example_mkdocstrings_lib/projects/: index.html
site/reference/example_mkdocstrings_lib/projects/foo/: index.html
site/search/: search_index.json
src/example_mkdocstrings_lib/: MyClass.py  __init__.py
src/example_mkdocstrings_lib/projects/: foo.py
tests/: __init__.py  test_cookiecutter.py
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  .python-version  LICENSE  README.md  justfile  logging_config.json  makefile  mkdocs.yml  mypy.ini  pyproject.toml  pyrightconfig.json
{{cookiecutter.project_name}}/.github/actions/setup/: action.yaml
{{cookiecutter.project_name}}/.github/workflows/: ci.yaml  gitleaks.yaml  release.yaml
{{cookiecutter.project_name}}/_cookie_features/ff_http/: app.py  logging_config.json  main.py
{{cookiecutter.project_name}}/_cookie_features/ff_http/utils/: __init__.py  create_app.py  degrade_status.py  logging_config.py  multiroute_context.py
{{cookiecutter.project_name}}/_cookie_features/ff_http/utils/middleware/: __init__.py  flask_logging.py
{{cookiecutter.project_name}}/_cookie_features/ff_pubsub/: app.py  main.py
{{cookiecutter.project_name}}/_cookie_features/ff_pubsub/utils/: __init__.py  deduping.py
{{cookiecutter.project_name}}/deprecated/: README.md
{{cookiecutter.project_name}}/docs/: gen_api_docs.py
{{cookiecutter.project_name}}/libs/: README.md
{{cookiecutter.project_name}}/src/{{cookiecutter.pkg_clean_name}}/: __init__.py
{{cookiecutter.project_name}}/src/{{cookiecutter.pkg_clean_name}}/types/: __init__.py  _types.py
{{cookiecutter.project_name}}/tests/: conftest.py  pytest.ini  smoke_test.py  strategies.py
